// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Collapse Accordion 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="collapse-div"
    >
      <div
        className="collapse-header"
      >
        <button
          aria-expanded="true"
          className="collapsed"
          data-toggle="collapse"
          onClick={[Function]}
        >
          Accordion Group Item #1
        </button>
      </div>
      <div
        className="collapse show"
        style={Object {}}
      >
        <div
          className="collapse-body"
        >
          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch.
        </div>
      </div>
      <div
        className="collapse-header"
      >
        <button
          aria-expanded="false"
          className=""
          data-toggle="collapse"
          onClick={[Function]}
        >
          Accordion Group Item #2
        </button>
      </div>
      <div
        className="collapse"
        style={Object {}}
      >
        <div
          className="collapse-body"
        >
          Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
        </div>
      </div>
      <div
        className="collapse-header"
      >
        <button
          aria-expanded="false"
          className=""
          data-toggle="collapse"
          onClick={[Function]}
        >
          Accordion Group Item #3
        </button>
      </div>
      <div
        className="collapse"
        style={Object {}}
      >
        <div
          className="collapse-body"
        >
          Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Collapse Collapse e Accordion innestati 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="collapse-div"
    >
      <div
        className="collapse-header"
      >
        <button
          aria-expanded="true"
          className="collapsed"
          data-toggle="collapse"
          onClick={[Function]}
        >
          Collapse header #1
        </button>
      </div>
      <div
        className="collapse show"
        style={Object {}}
      >
        <div
          className="collapse-body"
        >
          <div
            className="collapse-div"
          >
            <div
              className="collapse-header"
            >
              <button
                aria-expanded="true"
                className="collapsed"
                data-toggle="collapse"
                onClick={[Function]}
              >
                Nested panel header #1
              </button>
            </div>
            <div
              className="collapse show"
              style={Object {}}
            >
              <div
                className="collapse-body"
              >
                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch.
              </div>
            </div>
            <div
              className="collapse-header"
            >
              <button
                aria-expanded="false"
                className=""
                data-toggle="collapse"
                onClick={[Function]}
              >
                Nested panel header #2
              </button>
            </div>
            <div
              className="collapse"
              style={Object {}}
            >
              <div
                className="collapse-body"
              >
                Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
              </div>
            </div>
            <div
              className="collapse-header"
            >
              <button
                aria-expanded="false"
                className=""
                data-toggle="collapse"
                onClick={[Function]}
              >
                Nested panel header #3
              </button>
            </div>
            <div
              className="collapse"
              style={Object {}}
            >
              <div
                className="collapse-body"
              >
                Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="collapse-header"
      >
        <button
          aria-expanded="false"
          className=""
          data-toggle="collapse"
          onClick={[Function]}
        >
          Collapse header #2
        </button>
      </div>
      <div
        className="collapse"
        style={Object {}}
      >
        <div
          className="collapse-body"
        >
          Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
        </div>
      </div>
      <div
        className="collapse-header"
      >
        <button
          aria-expanded="false"
          className=""
          data-toggle="collapse"
          onClick={[Function]}
        >
          Collapse header #3
        </button>
      </div>
      <div
        className="collapse"
        style={Object {}}
      >
        <div
          className="collapse-body"
        >
          Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Collapse Esempi 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <button
        aria-label={null}
        className="btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        Link with href
      </button>
       
      <button
        aria-label={null}
        className="btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        Button with data-target
      </button>
      <div
        className="collapse"
        style={Object {}}
      >
        <div
          className="card-wrapper"
        >
          <div
            className="card"
          >
            <div
              className="card-body"
            >
              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Collapse Gruppi di elementi richiudibili 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="collapse-div"
    >
      <div
        className="collapse-header"
      >
        <button
          aria-expanded="true"
          className="collapsed"
          data-toggle="collapse"
          onClick={[Function]}
        >
          Collapsible Group Item #1
        </button>
      </div>
      <div
        className="collapse show"
        style={Object {}}
      >
        <div
          className="collapse-body"
        >
          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch.
        </div>
      </div>
      <div
        className="collapse-header"
      >
        <button
          aria-expanded="false"
          className=""
          data-toggle="collapse"
          onClick={[Function]}
        >
          Collapsible Group Item #2
        </button>
      </div>
      <div
        className="collapse"
        style={Object {}}
      >
        <div
          className="collapse-body"
        >
          Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
        </div>
      </div>
      <div
        className="collapse-header"
      >
        <button
          aria-expanded="false"
          className=""
          data-toggle="collapse"
          onClick={[Function]}
        >
          Collapsible Group Item #3
        </button>
      </div>
      <div
        className="collapse"
        style={Object {}}
      >
        <div
          className="collapse-body"
        >
          Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
